Переписан ADD_1N_N, и ещё какие-то функции.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ project(dm_colloc)
 set(CMAKE_CXX_STANDARD 11)
 add_subdirectory(googletest-master)
 include_directories(googletest-master/googletest/include)
-add_executable(dm_colloc main.cpp)
+add_executable(dm_colloc main.cpp libs/src/naturals/struct.h)
 target_link_libraries(dm_colloc gtest)
